# edge-ai-cough-count-FORK

./: .gitignore  README.md  pyproject.toml
notebooks/: Extract_Audio.ipynb
